force-app/main/default/objects/Campaign/fields/Abrechnungsmodus__c.field-meta.xml
<CustomField>
    <fullName>Abrechnungsmodus__c</fullName>
    <label>Abrechnungsmodus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2500 Euro Rechnung</fullName>
            </value>
            <value>
                <fullName>50% Beteiligung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>