force-app/main/default/objects/Campaign/fields/Anzahl_Unterrichtseinheiten__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_Unterrichtseinheiten__c</fullName>
    <inlineHelpText>Wie viele UE werden hierfür angerechnet?
45 Min = 1 UE</inlineHelpText>
    <label>Anzahl Unterrichtseinheiten</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>