force-app/main/default/objects/Campaign/fields/Beauftragter_1__c.field-meta.xml
<CustomField>
    <fullName>Beauftragter_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beauftragter 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Beauftragter_1</relationshipName>
    <type>Lookup</type>
</CustomField>