force-app/main/default/objects/Campaign/fields/Beauftragter_2__c.field-meta.xml
<CustomField>
    <fullName>Beauftragter_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beauftragter 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Beauftragter_2</relationshipName>
    <type>Lookup</type>
</CustomField>