force-app/main/default/objects/Campaign/fields/Beauftragter_3__c.field-meta.xml
<CustomField>
    <fullName>Beauftragter_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beauftragter 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Beauftragter_3</relationshipName>
    <type>Lookup</type>
</CustomField>