force-app/main/default/objects/Campaign/fields/Beginn__c.field-meta.xml
<CustomField>
    <fullName>Beginn__c</fullName>
    <inlineHelpText>Uhrzeit</inlineHelpText>
    <label>Beginn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Uhrzeit</valueSetName>
    </valueSet>
</CustomField>