force-app/main/default/objects/Campaign/fields/Catering__c.field-meta.xml
<CustomField>
    <fullName>Catering__c</fullName>
    <label>Catering</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>