force-app/main/default/objects/Campaign/fields/ClickmeetingId__c.field-meta.xml
<CustomField>
    <fullName>ClickmeetingId__c</fullName>
    <label>Clickmeeting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>