force-app/main/default/objects/Campaign/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>Termin</label>
    <type>DateTime</type>
</CustomField>