force-app/main/default/objects/Campaign/fields/Ende__c.field-meta.xml
<CustomField>
    <fullName>Ende__c</fullName>
    <inlineHelpText>Uhrzeit</inlineHelpText>
    <label>Ende</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Uhrzeit</valueSetName>
    </valueSet>
</CustomField>