force-app/main/default/objects/Campaign/fields/Fortbildungs_Titel__c.field-meta.xml
<CustomField>
    <fullName>Fortbildungs_Titel__c</fullName>
    <inlineHelpText>Wie heißt der Kurs?</inlineHelpText>
    <label>Fortbildungs-Titel</label>
    <type>TextArea</type>
</CustomField>