force-app/main/default/objects/Campaign/fields/Fortbildungsanerkennung__c.field-meta.xml
<CustomField>
    <fullName>Fortbildungsanerkennung__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Für Trainstone Veranstaltungen. Diese kann für ein Zertifikat genutzt werden, dazu weitere Felder befüllen (UE etc.)</inlineHelpText>
    <label>Fortbildungsanerkennung</label>
    <type>Checkbox</type>
</CustomField>