force-app/main/default/objects/Campaign/fields/Is_public__c.field-meta.xml
<CustomField>
    <fullName>Is_public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ist öffentlich</label>
    <type>Checkbox</type>
</CustomField>