force-app/main/default/objects/Campaign/fields/Maklerbetreuer_WirtschaftsHaus__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer_WirtschaftsHaus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maklerbetreuer Carestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Name</field>
            <operation>startsWith</operation>
            <value>CS Maklerbetreuer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Kampagnen (Maklerbetreuer Carestone)</relationshipLabel>
    <relationshipName>Maklerbetreuer</relationshipName>
    <type>Lookup</type>
</CustomField>