force-app/main/default/objects/Campaign/fields/Organizer__c.field-meta.xml
<CustomField>
    <fullName>Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Veranstalter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Kampagnen</relationshipLabel>
    <relationshipName>Kampagnen</relationshipName>
    <type>Lookup</type>
</CustomField>