force-app/main/default/objects/Campaign/fields/Porto__c.field-meta.xml
<CustomField>
    <fullName>Porto__c</fullName>
    <label>Porto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>