force-app/main/default/objects/Campaign/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>PLZ</label>
    <length>8</length>
    <type>Text</type>
</CustomField>