force-app/main/default/objects/Campaign/fields/Reasons_for_termination__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_termination__c</fullName>
    <label>Gründe für Abbruch</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Krankheit WH</fullName>
            </value>
            <value>
                <fullName>Absage WH</fullName>
            </value>
            <value>
                <fullName>Krankheit Makler</fullName>
            </value>
            <value>
                <fullName>Absage Makler</fullName>
            </value>
            <value>
                <fullName>Zu wenig Teilnehmer</fullName>
            </value>
            <value>
                <fullName>Witterungsbedingt</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>