force-app/main/default/objects/Campaign/fields/Schuld_erstellt__c.field-meta.xml
<CustomField>
    <fullName>Schuld_erstellt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wahr, wenn die Schuld bereits erstellt wurde(Falls aus Versehen der Status mehrmals auf &quot;Abgeschlossen&quot; gestellt wurde)</inlineHelpText>
    <label>Schuld erstellt</label>
    <type>Checkbox</type>
</CustomField>