force-app/main/default/objects/Campaign/fields/Second_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Second_Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zweiter Referent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Second_Speaker</relationshipLabel>
    <relationshipName>Second_Speaker</relationshipName>
    <type>Lookup</type>
</CustomField>