force-app/main/default/objects/Campaign/fields/ShowInPartnerPortal__c.field-meta.xml
<CustomField>
    <fullName>ShowInPartnerPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Achtung: Nur die Typen &quot;Webinar + Roadshow + Objektveranstaltung&quot; können im Vertriebsportal angezeigt werden.</inlineHelpText>
    <label>Im Vertriebsportal sichtbar</label>
    <type>Checkbox</type>
</CustomField>