force-app/main/default/objects/Campaign/fields/Sonstiges__c.field-meta.xml
<CustomField>
    <fullName>Sonstiges__c</fullName>
    <label>Sonstiges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>