force-app/main/default/objects/Campaign/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Speaker</relationshipLabel>
    <relationshipName>Speaker</relationshipName>
    <type>Lookup</type>
</CustomField>