force-app/main/default/objects/Campaign/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Straße</label>
    <length>115</length>
    <type>Text</type>
</CustomField>