force-app/main/default/objects/Campaign/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <inlineHelpText>Beispielsweise bei Webinaren der Link zum Webinar</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>