force-app/main/default/objects/Campaign/fields/Vermittelte_Themen__c.field-meta.xml
<CustomField>
    <fullName>Vermittelte_Themen__c</fullName>
    <inlineHelpText>Welche Themen wurden in der Fortbildung abgedeckt? Dieser Text wird für das Zertifikat übernommen. 

Max. 10 Zeilen! Am besten Stichpunkte od. Aufzählung.</inlineHelpText>
    <label>Vermittelte Themen</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>