force-app/main/default/objects/Campaign/fields/Weiterbildungspflicht_nach__c.field-meta.xml
<CustomField>
    <fullName>Weiterbildungspflicht_nach__c</fullName>
    <label>Weiterbildungspflicht nach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>§ 34c Absatz 2a GewO i.V.m. § 15b Absatz 1 MaBV</fullName>
            </value>
            <value>
                <fullName>§ 34d Absatz 9 Satz 2 GewO bzw. § 48 Absatz 2 VAG</fullName>
            </value>
            <value>
                <fullName>§ 34c Absatz 2a GewO i.V.m. § 15b Absatz 1 MaBV und § 34d Absatz 9 Satz 2 GewO bzw. § 48 Absatz 2 VAG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>