force-app/main/default/objects/Campaign/fields/Zeitaequivalent__c.field-meta.xml
<CustomField>
    <fullName>Zeitaequivalent__c</fullName>
    <formula>Anzahl_Unterrichtseinheiten__c * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zeitäquivalent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>