force-app/main/default/objects/Campaign/fields/zoom_app__Zoom_Webinar__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Zoom_Webinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Webinar</label>
    <referenceTo>zoom_app__Zoom_Webinar__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>