force-app/main/default/objects/Campaign/fields/Zugeh_riger_Kurs__c.field-meta.xml
<CustomField>
    <fullName>Zugeh_riger_Kurs__c</fullName>
    <inlineHelpText>Im Rahmen welches Kurses wurde die Veranstaltung absolviert?</inlineHelpText>
    <label>Zugehöriger Kurs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>