force-app/main/default/objects/Campaign/listViews/Org_Campaign_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Campaign_Hierarchy</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ID</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Campaign_Hierarchy</label>
</ListView>