force-app/main/default/objects/Campaign/listViews/zuk_nftige.listView-meta.xml
<ListView>
    <fullName>zuk_nftige</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DateTime__c</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>zukünftige</label>
</ListView>